--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 
     <!-- Footer Section -->
     <footer class="bg-[#FFFCF3]">
-      <section class="px-4 md:px-0 md:w-5/6 mx-auto py-32">
+      <section class="px-4 md:px-0 md:w-5/6 mx-auto py-16 md:py-32">
         <div class="grid lg:grid-cols-2 text-black gap-5">
-          <div class="grid lg:grid-cols-3 gap-3">
+          <div class="grid md:grid-cols-3 lg:grid-cols-3 gap-3">
             <div
               class="flex flex-col items-start text-left text-xl font-medium text-[#403F3F] gap-5"
             >
@@ -184,7 +184,7 @@
               <p>Features</p>
               <p>Pricing</p>
               <p>FAQs</p>
-              <p>About</p>
+              <p class="mb-10 md:mb-0">About</p>
             </div>
             <div
               class="flex flex-col items-start text-left text-xl font-medium text-[#403F3F] gap-5"
@@ -195,7 +195,7 @@
               <p class="md:mt-3">UI/UX design</p>
               <p>Product Design</p>
               <p>Back End Developer</p>
-              <p>Front End Developer</p>
+              <p class="mb-10 md:mb-0">Front End Developer</p>
             </div>
             <div
               class="flex flex-col items-start text-left text-xl font-medium text-[#403F3F] gap-5"
@@ -206,17 +206,19 @@
               <p class="md:mt-3">FAQ</p>
               <p>Support</p>
               <p>Privacy Policy</p>
-              <p>Terms of Service</p>
+              <p class="mb-10 md:mb-0">Terms of Service</p>
             </div>
           </div>
 
           <!-- Contact Section -->
           <div class="flex flex-col items-start text-left">
-            <h3 class="text-md md:text-2xl text-[#403F3F] font-bold">
+            <h3
+              class="text-xl md:text-2xl text-[#403F3F] font-bold md:mt-10 lg:mt-0"
+            >
               Subscribe to our newsletter
             </h3>
             <p
-              class="text-[#706F6F] text-sm md:text-lg font-normal md:mt-6 md:mb-4"
+              class="text-[#706F6F] text-sm md:text-lg font-normal mt-3 md:mt-6 mb-4 md:mb-4"
             >
               There are many variations of passages of available, <br />
               but the majority have suffered
