--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         </div>
 
         <button
+          id="btn-show-all"
           class="bg-[#FFC107] text-black text-sm md:text-xl font-bold px-5 md:px-10 py-2 md:py-4 rounded md:rounded-lg md:mt-20 mt-8"
         >
           Show All
