fixed mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             the majority have <br />
             suffered alteration in some form, by injected humou.
           </p>
-          <div class="flex items-center justify-center mt-3 md:mt-8">
+          <div
+            class="flex items-center w-11/12 md:w-full mx-auto justify-center mt-3 md:mt-8"
+          >
             <div
               class="relative rounded-lg w-max lg:w-full flex items-center justify-center"
             >
@@ -165,7 +167,7 @@
         <div class="grid lg:grid-cols-2 text-black gap-5">
           <div class="grid md:grid-cols-3 lg:grid-cols-3 gap-3">
             <div
-              class="flex flex-col items-start text-left text-xl font-medium text-[#403F3F] gap-5"
+              class="flex flex-col items-start text-left text-md md:text-xl font-medium text-[#403F3F] gap-5"
             >
               <h3 class="text-md md:text-2xl text-[#403F3F] font-bold">
                 Section
@@ -177,7 +179,7 @@
               <p class="mb-10 md:mb-0">About</p>
             </div>
             <div
-              class="flex flex-col items-start text-left text-xl font-medium text-[#403F3F] gap-5"
+              class="flex flex-col items-start text-left text-md md:text-xl font-medium text-[#403F3F] gap-5"
             >
               <h3 class="text-md md:text-2xl text-[#403F3F] font-bold">
                 Section
@@ -188,11 +190,11 @@
               <p class="mb-10 md:mb-0">Front End Developer</p>
             </div>
             <div
-              class="flex flex-col items-start text-left text-xl font-medium text-[#403F3F] gap-5"
+              class="flex flex-col items-start text-left text-md md:text-xl font-medium text-[#403F3F] gap-5"
             >
-              <h3 class="text-md md:text-2xl text-[#403F3F] font-bold">
+              <h4 class="text-lg md:text-2xl text-[#403F3F] font-bold">
                 Resource
-              </h3>
+              </h4>
               <p class="md:mt-3">FAQ</p>
               <p>Support</p>
               <p>Privacy Policy</p>
@@ -203,12 +205,12 @@
           <!-- Contact Section -->
           <div class="flex flex-col items-start text-left">
             <h3
-              class="text-xl md:text-2xl text-[#403F3F] font-bold md:mt-10 lg:mt-0"
+              class="text-lg md:text-2xl text-[#403F3F] font-bold md:mt-10 lg:mt-0"
             >
               Subscribe to our newsletter
             </h3>
             <p
-              class="text-[#706F6F] text-sm md:text-lg font-normal mt-3 md:mt-6 mb-4 md:mb-4"
+              class="text-[#706F6F] text-md md:text-lg font-normal mt-3 md:mt-6 mb-4 md:mb-4"
             >
               There are many variations of passages of available, <br />
               but the majority have suffered
@@ -218,7 +220,7 @@
               class="w-max lg:w-full flex items-center gap-6 justify-between"
             >
               <input
-                class="bg-transparent text-gray-900 border border-2 border-gray-200 text-xs md:text-base block w-full py-2 md:py-4 pl-4 md:px-4 rounded md:rounded-lg"
+                class="bg-transparent text-gray-900 border border-2 border-gray-200 text-sm md:text-base block w-full py-2 md:py-4 pl-4 md:px-4 rounded md:rounded-lg"
                 type="email"
                 name=""
                 id=""
