--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </p>
 
             <div
-              class="w-max lg:w-full flex items-center md:gap-6 justify-between"
+              class="w-max lg:w-full flex items-center gap-1 md:gap-6 justify-between"
             >
               <input
                 class="bg-transparent text-gray-900 border border-2 border-gray-200 text-sm md:text-base block w-3/5 md:w-full py-3 md:py-4 pl-4 md:px-4 rounded md:rounded-lg"
