--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       }
     </style>
   </head>
-  <body class="text-center overflow-x-hidden" onload="loadMeals('', 6);">
+  <body class="text-center" onload="loadMeals('', 6);">
     <header class="px-4 md:px-0 md:w-5/6 mx-auto">
       <nav class="py-4 md:py-6">
         <ul class="flex items-center justify-between">
