fixed mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
       <!-- Banner Section -->
 
       <section class="relative">
-        <img class="w-full" src="images/banner_1.png" alt="" />
+        <img
+          class="object-cover w-full h-60 md:h-max"
+          src="images/banner_1.png"
+          alt=""
+        />
         <div
           class="bg-[#100f0f] opacity-[0.7] w-full h-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
         ></div>
@@ -59,7 +63,7 @@
           class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full md:w-max text-white"
         >
           <h1
-            class="text-2xl md:text-5xl lg:text-6xl font-bold leading-none md:leading-normal text-center mb-2 md:mb-6"
+            class="text-3xl md:text-5xl lg:text-6xl font-bold leading-none md:leading-normal text-center mb-4 md:mb-6"
           >
             Taste Our Delicious <br />
             Best Foods
@@ -70,7 +74,7 @@
             suffered alteration in some form, by injected humou.
           </p>
           <div
-            class="flex items-center w-11/12 md:w-full mx-auto justify-center mt-3 md:mt-8"
+            class="flex items-center w-11/12 md:w-full mx-auto justify-center mt-6 md:mt-8"
           >
             <div
               class="relative rounded-lg w-max lg:w-full flex items-center justify-center"
