--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 class="fa-solid fa-magnifying-glass md:fa-lg absolute left-0 px-4 md:px-6 text-gray-400"
               ></i>
               <input
-                class="text-gray-900 text-xs md:text-base block w-full py-2.5 md:py-4 pl-10 md:px-16 rounded-tl md:rounded-tl-lg rounded-bl md:rounded-bl-lg"
+                class="text-gray-900 text-xs md:text-base block w-11/12 md:w-full py-2.5 md:py-4 pl-10 md:px-16 rounded-tl md:rounded-tl-lg rounded-bl md:rounded-bl-lg"
                 type="text"
                 name=""
                 id="search-field"
