--- a/index.html
+++ b/index.html
@@ -163,6 +163,92 @@
           </p>
         </div>
       </section>
+
+      <!-- Modal backdrop -->
+      <div
+        class="fixed z-50 inset-0 bg-black bg-opacity-50 hidden"
+        id="modalBackdrop"
+      ></div>
+
+      <!-- Modal dialog -->
+      <div class="fixed z-50 inset-0 overflow-y-auto hidden" id="modalDialog">
+        <div class="flex items-center justify-center min-h-screen">
+          <!-- change the width here -->
+          <div
+            class="bg-white my-5 md:my-16 w-11/12 md:w-3/4 lg:w-1/2 rounded-lg shadow-lg p-7 mx-2"
+            id="modalContent"
+          >
+            <div class="flex items-center justify-between mb-7 mt-2">
+              <!-- Modal Title -->
+              <h2 class="text-2xl md:text-3xl font-bold" id="modal-title">
+                Modal Title
+              </h2>
+              <button
+                class="text-black hover:text-gray-700"
+                onclick="closeModal()"
+              >
+                <svg
+                  class="md:h-10 h-6 md:w-10 w-6"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              </button>
+            </div>
+            <hr />
+            <img
+              src=""
+              id="modal-img"
+              class="w-full my-4 rounded-lg md:h-96 object-cover"
+              alt=""
+            />
+            <div class="my-3 flex flex-col gap-4 text-left">
+              <h4 class="text-lg md:text-xl font-semibold">
+                Category :
+                <span
+                  id="modal-category"
+                  class="font-normal text-base md:text-lg text-[#403F3F]"
+                ></span>
+              </h4>
+              <h4 class="text-lg md:text-xl font-semibold">
+                Area :
+                <span
+                  id="modal-area"
+                  class="font-normal text-base md:text-lg text-[#403F3F]"
+                ></span>
+              </h4>
+              <h4 class="text-lg md:text-xl font-semibold">
+                Instructions :
+                <span
+                  id="modal-instruction"
+                  class="font-normal text-base md:text-lg text-[#403F3F]"
+                ></span>
+              </h4>
+              <h4 class="text-lg md:text-xl font-semibold">
+                Youtube :
+                <a
+                  id="modal-youtube"
+                  class="font-normal text-sky-500 text-base md:text-lg underline decoration-sky-500"
+                  href=""
+                ></a>
+              </h4>
+            </div>
+            <div class="flex items-center justify-end">
+              <button
+                onclick="closeModal()"
+                class="bg-[#FFC107] rounded-lg px-7 py-3 mt-2 font-semibold text-black"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer Section -->
