--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           >
             <div class="flex items-center justify-between mb-7 mt-2">
               <!-- Modal Title -->
-              <h2 class="text-2xl md:text-3xl font-bold" id="modal-title">
+              <h2 class="text-xl md:text-3xl font-bold" id="modal-title">
                 Modal Title
               </h2>
               <button
@@ -188,7 +188,7 @@
                 onclick="closeModal()"
               >
                 <svg
-                  class="md:h-10 h-6 md:w-10 w-6"
+                  class="md:h-8 h-6 md:w-8 w-6"
                   viewBox="0 0 24 24"
                   fill="none"
                   stroke="currentColor"
